--- a/Views/Properties/Create.cshtml
+++ b/Views/Properties/Create.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Tittle" class="control-label"></label>
@@ -41,6 +41,9 @@
                 <label asp-for="Amenities" class="control-label"></label>
                 <input asp-for="Amenities" class="form-control" />
                 <span asp-validation-for="Amenities" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="file" name="files" multiple required />
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
