Property Images in Index and Details

--- a/Views/Properties/Details.cshtml
+++ b/Views/Properties/Details.cshtml
@@ -9,6 +9,13 @@
 <div>
     <h4>Property</h4>
     <hr />
+    @foreach(var image in Model.Images){
+                @image.Id
+                    {
+                    <img class="img-thumbnail" src="data:@image.FileType;base64,@Convert.ToBase64String(image.Data, 0, image.Data.Length)" />
+                    }
+                }
+
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Tittle)
