--- a/Views/Properties/Create.cshtml
+++ b/Views/Properties/Create.cshtml
@@ -9,7 +9,7 @@
 <h4>Property</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-5">
         <form asp-action="Create" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -44,6 +44,7 @@
             </div>
             <div class="form-group">
                 <input type="file" name="files" multiple required />
+                <span asp-validation-for="Images" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
