--- a/Views/Properties/Details.cshtml
+++ b/Views/Properties/Details.cshtml
@@ -12,7 +12,7 @@
     @foreach(var image in Model.Images){
                 @image.Id
                     {
-                    <img class="img-thumbnail" src="data:@image.FileType;base64,@Convert.ToBase64String(image.Data, 0, image.Data.Length)" />
+                    <img class="img-thumbnail" src="data:@image.FileType;base64,@Convert.ToBase64String(image.Data, 0, image.Data.Length)" style="width:250px;height:200px;" />
                     }
                 }
 
