--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Airbnb_PWEB</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Properties" asp-action="Index">MyAirbnb</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -23,6 +23,12 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Properties" asp-action="Index">Imóveis</a>
+                        </li>
+                        <li class="nav-item">
+                            <form class="form-inline" asp-controller="Properties" asp-action="Search" method="get">
+                                <input type="text" class="form-control" name="text2search" placeholder="Search a Property..." />
+                                <input type="submit"value="Search" />
+                            </form>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
