--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -24,8 +24,11 @@
                         <li class="nav-item">
                             <form class="form-inline" asp-controller="Properties" asp-action="Search" method="get">
                                 <input type="text" class="form-control" name="text2search" placeholder="Search a Property..." />
-                                <input type="submit"value="Search" />
+                                <input type="submit" value="Search" />
                             </form>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Reservations" asp-action="Index">Reservas Imóveis</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
