--- a/Views/Properties/Details.cshtml
+++ b/Views/Properties/Details.cshtml
@@ -10,7 +10,6 @@
     <h4>Property</h4>
     <hr />
     @foreach(var image in Model.Images){
-                @image.Id
                     {
                     <img class="img-thumbnail" src="data:@image.FileType;base64,@Convert.ToBase64String(image.Data, 0, image.Data.Length)" style="width:250px;height:200px;" />
                     }
@@ -53,6 +52,9 @@
             @Html.DisplayFor(model => model.Amenities)
         </dd>
     </dl>
+</div>
+<div>
+    <a asp-controller="Evaluations"asp-action="ListComments" asp-route-id="@Model.Id">Ver Comentários sobre a Propriedade</a>
 </div>
 <div class="form-group">
     <a asp-controller="Reservations" asp-action="Create" asp-route-id ="@Model.Id">
