--- a/Views/Properties/Details.cshtml
+++ b/Views/Properties/Details.cshtml
@@ -14,7 +14,7 @@
                     <img class="img-thumbnail" src="data:@image.FileType;base64,@Convert.ToBase64String(image.Data, 0, image.Data.Length)" style="width:250px;height:200px;" />
                     }
                 }
-    <dl class="row">
+    <dl class="form-row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Tittle)
         </dt>
@@ -53,7 +53,7 @@
         </dd>
     </dl>
 </div>
-<div>
+<div class="form-group">
     <a asp-controller="Evaluations"asp-action="ListComments" asp-route-id="@Model.Id">Ver Comentários sobre a Propriedade</a>
 </div>
 <div class="form-group">
