--- a/Views/Properties/Details.cshtml
+++ b/Views/Properties/Details.cshtml
@@ -14,7 +14,7 @@
                     <img class="img-thumbnail" src="data:@image.FileType;base64,@Convert.ToBase64String(image.Data, 0, image.Data.Length)" style="width:250px;height:200px;" />
                     }
                 }
-    <dl class="form-row">
+    <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Tittle)
         </dt>
@@ -58,7 +58,7 @@
 </div>
 <div class="form-group">
     <a asp-controller="Reservations" asp-action="Create" asp-route-id ="@Model.Id">
-    <input type="button" value="Reservar" class="btn btn-primary"/>
+    <input type="button" value="Verificar Disponibilidade" class="btn btn-primary"/>
     </a>
 </div>
 <div>
