--- a/Views/Properties/Index.cshtml
+++ b/Views/Properties/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Imóveis</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Adicionar Nova Propriedade</a>
 </p>
 <table class="table">
     <thead>
