--- a/Views/Reservations/Create.cshtml
+++ b/Views/Reservations/Create.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Create</h1>
 
-<h4>Reservation</h4>
+<h4>Nova Reserva</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -23,7 +23,7 @@
                 <span asp-validation-for="CheckOut" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Reservar" class="btn btn-primary" />
             </div>
         </form>
     </div>
