--- a/Views/Reservations/Index.cshtml
+++ b/Views/Reservations/Index.cshtml
@@ -6,24 +6,22 @@
 
 <h1>Lista de Reservas</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.CheckIn)
+                Propriedade
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CheckOut)
+               Check-In
+            </th>
+            <th>
+                Check-Out
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.UserId)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Property)
-            </th>
+            
             <th></th>
         </tr>
     </thead>
@@ -31,6 +29,9 @@
         @foreach (var item in Model)
         {
             <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Property.Tittle)
+                </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.CheckIn)
                 </td>
@@ -41,12 +42,9 @@
                     @Html.DisplayFor(modelItem => item.UserId)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Property.Address)
-                </td>
-                <td>
-                    <a asp-controller="Evaluations" asp-action="Create" asp-route-id="@item.ReservationId">Comments</a> |
-                    <a asp-action="Details" asp-route-id="@item.ReservationId">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.ReservationId">Delete</a>
+                    <a asp-controller="Evaluations" asp-action="Create" asp-route-id="@item.ReservationId">Avaliar Estadia</a> |
+                    <a asp-action="Details" asp-route-id="@item.ReservationId">Detalhes</a> |
+                    <a asp-action="Delete" asp-route-id="@item.ReservationId">Eliminar</a>
                 </td>
             </tr>
         }
