Add Map to Property

--- a/Views/Properties/Details.cshtml
+++ b/Views/Properties/Details.cshtml
@@ -52,6 +52,37 @@
             @Html.DisplayFor(model => model.Amenities)
         </dd>
     </dl>
+
+<div class="mapouter">
+  <div class="gmap_canvas">
+    <iframe
+      width="100%"
+      height="300"
+      id="gmap_canvas"
+      src=""
+      frameborder="0"
+      scrolling="no"
+      marginheight="0"
+      marginwidth="0"
+    ></iframe>
+    <style>
+      .mapouter {
+        position: relative;
+        text-align: right;
+        height: 300px;
+        width: 100%;
+      }
+    </style>
+    <style>
+      .gmap_canvas {
+        overflow: hidden;
+        background: none !important;
+        height: 300px;
+        width: 100%;
+      }
+    </style>
+  </div>
+</div>
 </div>
 <div class="form-group">
     <a asp-controller="Evaluations"asp-action="ListComments" asp-route-id="@Model.Id">Ver Comentários sobre a Propriedade</a>
@@ -65,3 +96,15 @@
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
+
+<script>
+  function updateMap() {
+
+    var address = '@Html.Raw(Model.Address)';
+
+    document.getElementById("gmap_canvas").src =
+      "https://maps.google.com/maps?q=" + address + "&t=&z=16&ie=UTF8&iwloc=&output=embed";
+  }
+
+  window.onload = updateMap;
+</script>
