--- a/Views/Properties/Create.cshtml
+++ b/Views/Properties/Create.cshtml
@@ -13,6 +13,10 @@
         <form asp-action="Create" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="CategoryId" class="control-label"></label>
+                <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId"></select>
+            </div>
+            <div class="form-group">
                 <label asp-for="Tittle" class="control-label"></label>
                 <input asp-for="Tittle" class="form-control" />
                 <span asp-validation-for="Tittle" class="text-danger"></span>
