--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -22,6 +22,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Properties" asp-action="Index">Imóveis</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="Index">Categorias</a>
+                        </li>
+                        <li class="nav-item">
                             <form class="form-inline" asp-controller="Properties" asp-action="Search" method="get">
                                 <input type="text" class="form-control" name="text2search" placeholder="Search a Property..." />
                                 <input type="submit" value="Search" />
