--- a/Views/Properties/Index.cshtml
+++ b/Views/Properties/Index.cshtml
@@ -49,10 +49,10 @@
             <td>
                 @Html.DisplayFor(modelItem => item.City)
             </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+            <td width = "11%">
+                <a asp-action="Edit" asp-route-id="@item.Id"><img src = "resources/edit.svg"  width = "30%" alt="Editar"/></a>
+                <a asp-action="Details" asp-route-id="@item.Id"><img src = "resources/details.svg" width = "30%" alt="Detalhes"/></a>
+                <a asp-action="Delete" asp-route-id="@item.Id"><img src = "resources/delete.svg" width = "30%" alt="Remover"/></a>
             </td>
         </tr>
 }
