Add Reservation CheckList

--- a/Views/Properties/Index.cshtml
+++ b/Views/Properties/Index.cshtml
@@ -4,28 +4,28 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Imóveis</h1>
+<h1>Alojamentos</h1>
 
 <p>
-    <a asp-action="Create">Adicionar Nova Propriedade</a>
+    <a asp-action="Create">Adicionar Novo Alojamento</a>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Images)
+                Imóvel
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Tittle)
+                Título
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Description)
+                Descrição
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.pricePerNigth)
+                Preço/Noite
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.City)
+                Localização
             </th>
             <th></th>
         </tr>
