--- a/Views/Properties/Details.cshtml
+++ b/Views/Properties/Details.cshtml
@@ -7,166 +7,170 @@
 <h1>@Model.Tittle</h1>
 <br />
 <div>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<style>
-.mySlides {display:none;}
-</style>
-<body>
-
-<div class="w3-content w3-display-container">
-
-  @foreach(var image in Model.Images){
-        {
-            <img class="mySlides" src="data:image.FileType;base64,@Convert.ToBase64String(image.Data, 0, image.Data.Length)"  style="width:100%; height:400px">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <style>
+        .mySlides {
+            display: none;
         }
-    }
-
-  <button class="prev" onclick="plusDivs(-1)">&#10094;</button>
-  <button class="next" onclick="plusDivs(1)">&#10095;</button>
-</div>
-
-<style>
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  padding: 16px;
-  margin-top: -22px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border: none;  
-  background-color: transparent;
-  user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border: none;  
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: transparent;
-  border: none;  
-}
-</style>
-
-<script>
-var slideIndex = 1;
-showDivs(slideIndex);
-
-function plusDivs(n) {
-  showDivs(slideIndex += n);
-}
-
-function showDivs(n) {
-  var i;
-  var x = document.getElementsByClassName("mySlides");
-  if (n > x.length) {slideIndex = 1}
-  if (n < 1) {slideIndex = x.length}
-  for (i = 0; i < x.length; i++) {
-    x[i].style.display = "none";  
-  }
-  x[slideIndex-1].style.display = "block";  
-}
-</script>
-
-</body>
-
-
-<dl class="row">
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.Category)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.Category.Name)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.Tittle)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.Tittle)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.Description)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.Description)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.pricePerNigth)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.pricePerNigth)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.Address)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.Address)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.City)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.City)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.Amenities)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.Amenities)
-    </dd>
-</dl>
-
-<div class="mapouter">
-  <div class="gmap_canvas">
-    <iframe
-      width="100%"
-      height="300"
-      id="gmap_canvas"
-      src=""
-      frameborder="0"
-      scrolling="no"
-      marginheight="0"
-      marginwidth="0"
-    ></iframe>
-    <style>
-      .mapouter {
-        position: relative;
-        text-align: right;
-        height: 300px;
-        width: 100%;
-      }
     </style>
-    <style>
-      .gmap_canvas {
-        overflow: hidden;
-        background: none !important;
-        height: 300px;
-        width: 100%;
-      }
-    </style>
-  </div>
-</div>
+    <body>
+
+        <div class="w3-content w3-display-container">
+
+            @foreach (var image in Model.Images)
+            {
+                {
+                    <img class="mySlides" src="data:image.FileType;base64,@Convert.ToBase64String(image.Data, 0, image.Data.Length)" style="width:100%; height:400px">
+                }
+            }
+
+            <button class="prev" onclick="plusDivs(-1)">&#10094;</button>
+            <button class="next" onclick="plusDivs(1)">&#10095;</button>
+        </div>
+
+        <style>
+            .prev, .next {
+                cursor: pointer;
+                position: absolute;
+                top: 50%;
+                width: auto;
+                padding: 16px;
+                margin-top: -22px;
+                color: white;
+                font-weight: bold;
+                font-size: 18px;
+                transition: 0.6s ease;
+                border: none;
+                background-color: transparent;
+                user-select: none;
+            }
+
+            /* Position the "next button" to the right */
+            .next {
+                right: 0;
+                border: none;
+            }
+
+                /* On hover, add a black background color with a little bit see-through */
+                .prev:hover, .next:hover {
+                    background-color: transparent;
+                    border: none;
+                }
+        </style>
+
+        <script>
+            var slideIndex = 1;
+            showDivs(slideIndex);
+
+            function plusDivs(n) {
+                showDivs(slideIndex += n);
+            }
+
+            function showDivs(n) {
+                var i;
+                var x = document.getElementsByClassName("mySlides");
+                if (n > x.length) { slideIndex = 1 }
+                if (n < 1) { slideIndex = x.length }
+                for (i = 0; i < x.length; i++) {
+                    x[i].style.display = "none";
+                }
+                x[slideIndex - 1].style.display = "block";
+            }
+        </script>
+
+    </body>
+
+    <br />
+    <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Category)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Category.Name)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Tittle)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Tittle)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Description)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Description)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.pricePerNigth)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.pricePerNigth)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Address)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Address)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.City)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.City)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Amenities)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Amenities)
+        </dd>
+    </dl>
+
+
+    <div class="mapouter">
+        <div class="gmap_canvas">
+            <iframe width="100%"
+                    height="300"
+                    id="gmap_canvas"
+                    src=""
+                    frameborder="0"
+                    scrolling="no"
+                    marginheight="0"
+                    marginwidth="0"></iframe>
+            <style>
+                .mapouter {
+                    position: relative;
+                    text-align: right;
+                    height: 300px;
+                    width: 100%;
+                }
+            </style>
+            <style>
+                .gmap_canvas {
+                    overflow: hidden;
+                    background: none !important;
+                    height: 300px;
+                    width: 100%;
+                }
+            </style>
+        </div>
+    </div>
 </div>
 <div class="form-group">
-    <a asp-controller="Evaluations"asp-action="ListComments" asp-route-id="@Model.Id">Ver Comentários sobre a Propriedade</a>
+    <a asp-controller="Evaluations" asp-action="ListComments" asp-route-id="@Model.Id">Ver Comentários sobre a Propriedade</a>
 </div>
 <div class="form-group">
-    <a asp-controller="Reservations" asp-action="Create" asp-route-id ="@Model.Id">
-    <input type="button" value="Verificar Disponibilidade" class="btn btn-primary"/>
+    <a asp-controller="Reservations" asp-action="Create" asp-route-id="@Model.Id">
+        <input type="button" value="Verificar Disponibilidade" class="btn btn-primary" />
     </a>
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
+<br />
+<br />
 
 <script>
   function updateMap() {
