Property and Reservation Changes

--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -41,7 +41,7 @@
                 <label asp-for="Input.FunctionRole"></label>
                     <select asp-for="Input.FunctionRole" class="form-control">
                         <option value="Client">Cliente</option>
-                        <option value="Owner_Employeer">Proprietário Imóvel</option>
+                        <option value="Owner_Manager">Proprietário Imóvel</option>
                     </select>
             <button type="submit" class="btn btn-primary">Register</button>
         </form>
