--- a/Views/Properties/Index.cshtml
+++ b/Views/Properties/Index.cshtml
@@ -7,7 +7,10 @@
 <h1>Alojamentos</h1>
 
 <p>
-    <a asp-action="Create">Adicionar Novo Alojamento</a>
+    @if (User.IsInRole("Owner_Manager"))
+    {
+        <a asp-action="Create">Adicionar Novo Alojamento</a>
+    }
 </p>
 <table class="table">
     <thead>
@@ -50,9 +53,15 @@
                 @Html.DisplayFor(modelItem => item.City)
             </td>
             <td width = "11%">
-                <a asp-action="Edit" asp-route-id="@item.Id"><img src = "resources/edit.svg"  width = "30%" alt="Editar"/></a>
+                @if (User.IsInRole("Owner_Manager"))
+                {
+                 <a asp-action="Edit" asp-route-id="@item.Id"><img src = "resources/edit.svg"  width = "30%" alt="Editar"/></a>
+                }
                 <a asp-action="Details" asp-route-id="@item.Id"><img src = "resources/details.svg" width = "30%" alt="Detalhes"/></a>
-                <a asp-action="Delete" asp-route-id="@item.Id"><img src = "resources/delete.svg" width = "30%" alt="Remover"/></a>
+                 @if (User.IsInRole("Owner_Manager"))
+                {
+                 <a asp-action="Delete" asp-route-id="@item.Id"><img src = "resources/delete.svg" width = "30%" alt="Remover"/></a>
+                }
             </td>
         </tr>
 }
