--- a/Views/Reservations/Delete.cshtml
+++ b/Views/Reservations/Delete.cshtml
@@ -30,10 +30,10 @@
             @Html.DisplayFor(model => model.PropertyId)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UserId)
+            @Html.DisplayNameFor(model => model.ApplicationUser.Id)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.UserId)
+            @Html.DisplayFor(model => model.ApplicationUser.Id)
         </dd>
     </dl>
     
