--- a/Views/Reservations/Edit.cshtml
+++ b/Views/Reservations/Edit.cshtml
@@ -29,9 +29,9 @@
                 <span asp-validation-for="PropertyId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="UserId" class="control-label"></label>
-                <input asp-for="UserId" class="form-control" />
-                <span asp-validation-for="UserId" class="text-danger"></span>
+                <label asp-for="ApplicationUser.Id" class="control-label"></label>
+                <input asp-for="ApplicationUser.Id" class="form-control" />
+                <span asp-validation-for="ApplicationUser.Id" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
