--- a/Views/Reservations/IndexEmployees.cshtml
+++ b/Views/Reservations/IndexEmployees.cshtml
@@ -25,7 +25,7 @@
                 Check-Out
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.UserId)
+                @Html.DisplayNameFor(model => model.ApplicationUser.Id)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.statusReservation)
@@ -50,11 +50,12 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.CheckIn)
                 </td>
+
                 <td>
                     @Html.DisplayFor(modelItem => item.CheckOut)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.UserId)
+                    @Html.DisplayFor(modelItem => item.ApplicationUser.Id)
                 </td>
                 <td>
                     @if (item.statusReservation == true)
