--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -21,33 +21,37 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Properties" asp-action="Index">Imóveis</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="Index">Categorias</a>
-                        </li>
-                        <li class="nav-item">
-                            <form class="form-inline" asp-controller="Properties" asp-action="Search" method="get">
-                                <input type="text" class="form-control" name="text2search" placeholder="Search a Property..." />
-                                <input type="submit" value="Search" />
-                            </form>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Reservations" asp-action="Index">Reservas</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Items" asp-action="Index">Items</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Evaluations" asp-action="Index">Comentários</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Roles" asp-action="Index">Admin Roles</a>
-                        </li>
-                         @if (User.IsInRole("Owner_Manager")) {
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Novo Funcionário</a>
-                        </li>
-                         }
-                    </ul>
+                        @if (User.IsInRole("Owner_Manager"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="Index">Categorias</a>
+                            </li>
+                        }
+                            <li class="nav-item">
+                                <form class="form-inline" asp-controller="Properties" asp-action="Search" method="get">
+                                    <input type="text" class="form-control" name="text2search" placeholder="Search a Property..." />
+                                    <input type="submit" value="Search" />
+                                </form>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Reservations" asp-action="Index">Reservas</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Items" asp-action="Index">Items</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Evaluations" asp-action="Index">Comentários</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Roles" asp-action="Index">Admin Roles</a>
+                            </li>
+                            @if (User.IsInRole("Owner_Manager"))
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Novo Funcionário</a>
+                                </li>
+                            }
+                        </ul>
                     <partial name="_LoginPartial" />
                 </div>
             </div>
